@@ -23,7 +23,7 @@
 		<script src="./religion.js?v=0.8.5.5" type="text/javascript"></script>
 		<script src="./achievements.js?v=0.8.5.5" type="text/javascript"></script>
 		
-		<script src="./game.js?v=0.8.5.5" type="text/javascript"></script>
+		<script src="./game.js?v=0.8.5.5a" type="text/javascript"></script>
 		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -392,9 +392,8 @@
 						+/- toggle
 						
 					Rev: 5
-						Religion fixes
-						Cap tooltips
 						Trade all
+						High precision
 						
 				</pre>
 				<a href="changelog.txt" target="_blank" style="position:relative; top:-15px;">full changelog</a>
@@ -470,7 +469,13 @@
 					<option value="dark">Inverted</option>
 					<option value="grassy">Grassy</option>
 				</select> <br><br>
-				<input id="workersToggle" type="checkbox" onclick="gamePage.useWorkers = $('#workersToggle')[0].checked;">Use web worker (game works correctly in background tab, may cause performance issues) <br><br><br>
+				
+				<input id="workersToggle" type="checkbox" onclick="gamePage.useWorkers = $('#workersToggle')[0].checked;">
+					Use web worker (game works correctly in background tab, may cause performance issues) <br>
+				<input id="forceHighPrecision" type="checkbox" onclick="gamePage.forceHighPrecision = $('#forceHighPrecision')[0].checked;">
+					Use high precision for resource values<br>
+				
+				<br><br>
 				
 				<input type="button" value="Export" onclick="gamePage.saveExport();"><br>
 				<input type="button" value="Import" onclick="$('#importData').val(''); $('#importDiv').show();" style="margin-top:10px;"><br>
